finalizando logica de status pet